--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,9 @@
 	padding-top: 0em;
 	float: left;
 	font-size: 20pt;
+	position: absolute;
+	/* bottom: 0; */
+	left: 0;
 }
 
 .routeView #route-toggle-event{
@@ -27,9 +30,14 @@
 }
 
 .routeView .route-button-label{
-	font-size: 25pt;
+	font-size: 15pt;
 	padding-bottom: 2em;
 }
+
+/* .routeView span:nth-of-type(1){
+	font-size: 15pt;
+	padding-bottom: 2em;
+} */
 
 #map-img{
 	position: absolute;
