--- a/styles.css
+++ b/styles.css
@@ -164,6 +164,10 @@ div.tooltip {
 	margin-left: 1050px;
 }
 
+#pie-view{
+	margin-left: 1050px;
+}
+
 #comparison-view{
 	position: absolute;
 	top: 1200px;
